Modify JavaDOC and add comments in tests